# Prior-Authorization

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE (1).md  DISCOVERY-stedi.md  DISCOVERY.md  README.md  TODO-network-accuracy.md  TODO-unblock-phase2-3.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 0002_seed_payers.py  0003_seed_admin.py  0004_drop_actor_fk.py  0005_review_workflow.py  0006_usage_counters.py  0007_payer_sources.py  0008_directory_fixes.py  0009_kaiser_public_fhir.py  0010_molina_public_fhir.py  0011_centene_public_fhir.py  0012_scan_public_fhir.py  0015_il_ga_tx_markets.py  (+15 more)
docs/: NEXT-STEPS.md  TODO.md  architecture.md
network_probe/: _http.py  api.py  audit.py  base.py  benefits.py  cli.py  config.py  context.py  corroboration.py  eligibility.py  ingest.py  models.py  oon_benefits.py  overrides.py  ratelimit.py  secrets_provider.py  service.py  tin_crosswalk.py  tin_status.py
scripts/: ingest_credentialing.py  ingest_tic.py  migrate_overrides.py  pull_tic_index.py  resolve_payer_ids.py
tests/: conftest.py  test_adapter_routing.py  test_admin.py  test_api.py  test_api_eligibility.py  test_audit.py  test_auth_deps.py  test_auth_routes.py  test_benefits_model.py  test_catalogue.py  test_config.py  test_conftest_fixtures.py  test_corroboration.py  test_credentialing.py  test_crypto.py  test_db_models.py  test_db_session.py  test_determination.py  test_devoted.py  test_directory.py  test_eligibility.py  test_enrollment.py  test_evidence.py  test_fhir_auth.py  test_fhir_pdex.py  test_group_contracted.py  test_jwt.py  test_kms_secrets.py  test_line_of_business.py  test_models_evidence.py  test_netutil.py  test_oon_benefits.py  test_oscar.py  test_override_migrate.py  test_override_seed.py  test_parse_271.py  test_passwords.py  test_payer_search.py  test_payer_sources.py  test_pbp_ingest.py  (+25 more)
web/: .env.example  package-lock.json  package.json
(+182 files in other folders)
